# MYTH

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Vm Auto Build.sh  all_build_errors_v3.txt  all_build_warnings.txt  api.py  backend.py  config_loader.py  dialog_worker.py  myth_config.py  myth_llm.py  new_device_start.md  pyproject.toml  readme.md  requirements-desktop.txt  requirements.txt  run_desktop.py  run_tauri.py  secrets_bundle.b64  settings.json
.circleci/: config.yml
.github/workflows/: build-desktop.yml  ci.yml  deploy-website.yml  release.yml
governance/: CI_CD.md  agent_manifest.yaml  features.json  hydrate.py  identity.schema.json  identity.yaml  packaging.json  packaging.schema.json  secrets.template.yaml
honeypot/: db_dump.sql.bz2  id_rsa.pub.bak  secrets.txt
mcp_servers/: .mcp_tool_cache.json  mcp_client.py  mcp_common.py
mcp_servers/custom_servers/: __init__.py  burp_server.py  exploit_hub_server.py  nuclei_server.py  recon_server.py  report_gen_server.py  security_tools.py  target_tracker_server.py  targets.db
mcp_servers/local_servers/: __init__.py  browser_tools.py  curl_server.py  db_tools.py  docker_tools.py  fetch_server.py  filesystem_tools.py  system_tools.py
mcp_servers/remote_servers/: __init__.py  censys_server.py  cisa_kev_server.py  exploitdb_server.py  external_apis.py  gh_advisory_server.py  hibp_server.py  hunter_server.py  nvd_server.py  securitytrails_server.py  shodan_server.py  virustotal_server.py
myth_utils/: paths.py  sanitizer.py
packaging/: README.md  meta.json
packaging/alpine/: APKBUILD
packaging/arch/: .SRCINFO  PKGBUILD  PKGBUILD.template
packaging/chocolatey/: myth.nuspec
packaging/chromeos/: manifest.json
packaging/debian/: control  control.template  setup-apt-repo.sh
packaging/flatpak/: org.myth_myth.myth.json  org.myth_myth.myth.json.template  org.myth_tools.myth.json
rag_system/: __init__.py  archive_extractor.py  audio_processor.py  bulk_ingest.py  document_processor.py  file_uploader.py  folder_processor.py  image_processor.py  rag_chain.py  rag_evaluator.py  secret_scanner.py  universal_processor.py  vector_store.py  vibevoice_processor.py
resources/: mistral_models.txt  nvidia_nim_models.txt
scripts/: apply_repo_fix.py  batch_fix_lint.py  brand_sweep.py  build_macos_pkg.sh  ci_local.py  ci_orchestrator.py  fix_naming.py  fix_placeholders.py  hydrate_manifests.py  install.sh  install_nmap_sidecar.py  install_node_runtime.py  install_titan_dependencies.py  license_tool.py  license_worker.js  linux_distribution_engine.py  linux_universal_package.py  mass_templatize_packaging.py  normalize_git_eol.py  package_portable_win.ps1  package_python.py  sync_requirements.py  verify_google_ai.py  verify_nmap_bundling.py  verify_node_bundling.py
templates/: .gitlab-ci.yml.template  Dockerfile.template  api.py.template  api.py.template.top  pyproject.toml.template  readme.md.template  run_desktop.py.template  secrets.yaml.template
tests/: DEPENDENCIES.md  README.md  __init__.py  audit_dependencies.py  conftest.py  full_tool_results.txt  lint_results.xml  results.xml  run_all.py  test_config.py  test_core_imports.py  test_errors.txt  test_mcp_client.py  test_mcp_servers.py  test_output.txt  test_rag_system.py  test_tool_discovery.py  test_tool_imports.py  test_tool_invocations.py  validate_results.xml  verify_resolver.py  verify_structural_alignment.py  wordlist.txt
tools/: .internal_tool_cache.json  __init__.py  cache_manager.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/binaries/nmap/: ndiff.py
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: crash.rs  crypto.rs  integrity.rs  lib.rs  license.rs  main.rs  updater.rs
(+282 files in other folders)
